{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 1940,
  "lineage": "611f8738-371e-982a-2ea3-7e962d2e5b5b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/like98100-deploy-dev-alb/792fffb524e7aeef",
            "arn_suffix": "app/like98100-deploy-dev-alb/792fffb524e7aeef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "like98100-deploy-dev-alb-1632769045.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/like98100-deploy-dev-alb/792fffb524e7aeef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "like98100-deploy-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06e50af0236d0ad68"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7b263c29dcad6c9"
              },
              {
                "subnet_id": "subnet-0c3231a835be04477"
              }
            ],
            "subnets": [
              "subnet-0a7b263c29dcad6c9",
              "subnet-0c3231a835be04477"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-alb",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-alb",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "vpc_id": "vpc-0985a1bffd8bef445",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/like98100-deploy-dev-alb/792fffb524e7aeef/47d51fa6a66beb11",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 1,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/like98100-deploy-dev-blue-tg/c1e16cab3630e4af",
                        "weight": 100
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/like98100-deploy-dev-green-tg/6a7f89f228610c7c",
                        "weight": 0
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/like98100-deploy-dev-alb/792fffb524e7aeef/47d51fa6a66beb11",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/like98100-deploy-dev-alb/792fffb524e7aeef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-listener",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-listener",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.blue",
            "module.alb.aws_lb_target_group.green",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/like98100-deploy-dev-alb/792fffb524e7aeef/bf8dcc32e42a5679",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 1,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/like98100-deploy-dev-green-tg/6a7f89f228610c7c",
                        "weight": 100
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:listener/app/like98100-deploy-dev-alb/792fffb524e7aeef/bf8dcc32e42a5679",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:loadbalancer/app/like98100-deploy-dev-alb/792fffb524e7aeef",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-test-listener",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-test-listener",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.green",
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/like98100-deploy-dev-blue-tg/c1e16cab3630e4af",
            "arn_suffix": "targetgroup/like98100-deploy-dev-blue-tg/c1e16cab3630e4af",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200,302",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/like98100-deploy-dev-blue-tg/c1e16cab3630e4af",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "like98100-deploy-dev-blue-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-blue-tg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-blue-tg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/like98100-deploy-dev-green-tg/6a7f89f228610c7c",
            "arn_suffix": "targetgroup/like98100-deploy-dev-green-tg/6a7f89f228610c7c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200,302",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:077672914621:targetgroup/like98100-deploy-dev-green-tg/6a7f89f228610c7c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "like98100-deploy-dev-green-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-green-tg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-green-tg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:security-group/sg-06e50af0236d0ad68",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e50af0236d0ad68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "like98100-deploy-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-alb-sg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-alb-sg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:security-group/sg-0f784f41b84612c54",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f784f41b84612c54",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Custom port from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e50af0236d0ad68"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e50af0236d0ad68"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "like98100-deploy-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecs-sg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecs-sg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:internet-gateway/igw-0bd955966621363ae",
            "id": "igw-0bd955966621363ae",
            "owner_id": "077672914621",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-igw",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-igw",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:route-table/rtb-02f852039250bcbda",
            "id": "rtb-02f852039250bcbda",
            "owner_id": "077672914621",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-private-rt",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-private-rt",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:route-table/rtb-07a109cf38800e27a",
            "id": "rtb-07a109cf38800e27a",
            "owner_id": "077672914621",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd955966621363ae",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-public-rt",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-public-rt",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b01aace3d222c8aa",
            "route_table_id": "rtb-02f852039250bcbda",
            "subnet_id": "subnet-04b0b86336ba5bc9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b46cf339b3dd594f",
            "route_table_id": "rtb-02f852039250bcbda",
            "subnet_id": "subnet-03b26aec7387a2208"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0150309ad95fc69dc",
            "route_table_id": "rtb-07a109cf38800e27a",
            "subnet_id": "subnet-0a7b263c29dcad6c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1d1e182a74aba49",
            "route_table_id": "rtb-07a109cf38800e27a",
            "subnet_id": "subnet-0c3231a835be04477"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:security-group/sg-06c385eb79bf709dc",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c385eb79bf709dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "like98100-deploy-dev-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "077672914621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-vpc-endpoint-sg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-vpc-endpoint-sg",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:subnet/subnet-04b0b86336ba5bc9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b0b86336ba5bc9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-private-subnet-1",
              "Owner": "like98100",
              "Project": "deploy-test",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-private-subnet-1",
              "Owner": "like98100",
              "Project": "deploy-test",
              "Type": "private"
            },
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:subnet/subnet-03b26aec7387a2208",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b26aec7387a2208",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-private-subnet-2",
              "Owner": "like98100",
              "Project": "deploy-test",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-private-subnet-2",
              "Owner": "like98100",
              "Project": "deploy-test",
              "Type": "private"
            },
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:subnet/subnet-0a7b263c29dcad6c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7b263c29dcad6c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-public-subnet-1",
              "Owner": "like98100",
              "Project": "deploy-test",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-public-subnet-1",
              "Owner": "like98100",
              "Project": "deploy-test",
              "Type": "public"
            },
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:subnet/subnet-0c3231a835be04477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3231a835be04477",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077672914621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-public-subnet-2",
              "Owner": "like98100",
              "Project": "deploy-test",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-public-subnet-2",
              "Owner": "like98100",
              "Project": "deploy-test",
              "Type": "public"
            },
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc/vpc-0985a1bffd8bef445",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06b396fc8286abdf4",
            "default_route_table_id": "rtb-08639b9ea9310ce9c",
            "default_security_group_id": "sg-0246c2b9b85ad54a0",
            "dhcp_options_id": "dopt-0c5e006f744c7e851",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0985a1bffd8bef445",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08639b9ea9310ce9c",
            "owner_id": "077672914621",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-vpc",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-vpc",
              "Owner": "like98100",
              "Project": "deploy-test"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "cloudwatch_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-00bc2ffe1697ff4ef",
            "dns_entry": [
              {
                "dns_name": "vpce-00bc2ffe1697ff4ef-zgzy5v84.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-00bc2ffe1697ff4ef-zgzy5v84-ap-northeast-2b.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-00bc2ffe1697ff4ef-zgzy5v84-ap-northeast-2a.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "logs.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z01741272N0N0LGJ0KI7T"
              },
              {
                "dns_name": "logs.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z0257249317TUTQ4TCXL4"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z06340621SYDMIPNA4CX5"
              },
              {
                "dns_name": "streaming-logs.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0097523BVW9WXHYZVVZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00bc2ffe1697ff4ef",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-016e2350e7e374311",
              "eni-0667c7fc711e83cc2"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c385eb79bf709dc"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.logs",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.2.88",
                "subnet_id": "subnet-04b0b86336ba5bc9e"
              },
              {
                "ipv4": "10.10.4.253",
                "subnet_id": "subnet-03b26aec7387a2208"
              }
            ],
            "subnet_ids": [
              "subnet-03b26aec7387a2208",
              "subnet-04b0b86336ba5bc9e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-logs-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-logs-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-0555e2259bcc2ae84",
            "dns_entry": [
              {
                "dns_name": "vpce-0555e2259bcc2ae84-ozvf14zk.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0555e2259bcc2ae84-ozvf14zk-ap-northeast-2b.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0555e2259bcc2ae84-ozvf14zk-ap-northeast-2a.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "api.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z02567871LX4I1WKV0CP1"
              },
              {
                "dns_name": "ecr.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z009676717BCTINKU2HB0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0555e2259bcc2ae84",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08400221b1732ea39",
              "eni-09d87855bb00184b4"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c385eb79bf709dc"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.2.125",
                "subnet_id": "subnet-04b0b86336ba5bc9e"
              },
              {
                "ipv4": "10.10.4.176",
                "subnet_id": "subnet-03b26aec7387a2208"
              }
            ],
            "subnet_ids": [
              "subnet-03b26aec7387a2208",
              "subnet-04b0b86336ba5bc9e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecr-api-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecr-api-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-0ebb32672c4815412",
            "dns_entry": [
              {
                "dns_name": "vpce-0ebb32672c4815412-847684xt.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0ebb32672c4815412-847684xt-ap-northeast-2a.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0ebb32672c4815412-847684xt-ap-northeast-2b.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z018021435B2388RKUYRN"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z018021435B2388RKUYRN"
              },
              {
                "dns_name": "dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z02612491QSVV0IKTN0Y0"
              },
              {
                "dns_name": "*.dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z02612491QSVV0IKTN0Y0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ebb32672c4815412",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-072da365849a2f8d4",
              "eni-0ad4ba2bcbfadd2e8"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c385eb79bf709dc"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.2.105",
                "subnet_id": "subnet-04b0b86336ba5bc9e"
              },
              {
                "ipv4": "10.10.4.109",
                "subnet_id": "subnet-03b26aec7387a2208"
              }
            ],
            "subnet_ids": [
              "subnet-03b26aec7387a2208",
              "subnet-04b0b86336ba5bc9e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecr-dkr-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecr-dkr-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-07dc141830adeef9f",
            "dns_entry": [
              {
                "dns_name": "vpce-07dc141830adeef9f-uyyxjqxl.ecs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-07dc141830adeef9f-uyyxjqxl-ap-northeast-2a.ecs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-07dc141830adeef9f-uyyxjqxl-ap-northeast-2b.ecs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ecs.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z025533322E00E3WA894U"
              },
              {
                "dns_name": "ecs.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z025625933LZE61WGGQT3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07dc141830adeef9f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-043f8f13a20593859",
              "eni-07285fc947dadf359"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c385eb79bf709dc"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecs",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.2.177",
                "subnet_id": "subnet-04b0b86336ba5bc9e"
              },
              {
                "ipv4": "10.10.4.53",
                "subnet_id": "subnet-03b26aec7387a2208"
              }
            ],
            "subnet_ids": [
              "subnet-03b26aec7387a2208",
              "subnet-04b0b86336ba5bc9e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecs-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecs-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-04cfb76860ef48f74",
            "dns_entry": [
              {
                "dns_name": "vpce-04cfb76860ef48f74-38h0sd60.ecs-a.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-04cfb76860ef48f74-38h0sd60-ap-northeast-2a.ecs-a.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-04cfb76860ef48f74-38h0sd60-ap-northeast-2b.ecs-a.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ecs-a.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0262095119GIF93OF34"
              },
              {
                "dns_name": "ecs-a.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z01731612I1NS80Q2BSIY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04cfb76860ef48f74",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-035a3678f055bae4b",
              "eni-04065759739985ef2"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c385eb79bf709dc"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecs-agent",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.2.220",
                "subnet_id": "subnet-04b0b86336ba5bc9e"
              },
              {
                "ipv4": "10.10.4.143",
                "subnet_id": "subnet-03b26aec7387a2208"
              }
            ],
            "subnet_ids": [
              "subnet-03b26aec7387a2208",
              "subnet-04b0b86336ba5bc9e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecs-agent-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecs-agent-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecs_telemetry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-0e3401f1835d0673e",
            "dns_entry": [
              {
                "dns_name": "vpce-0e3401f1835d0673e-kpvznedq.ecs-t.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e3401f1835d0673e-kpvznedq-ap-northeast-2b.ecs-t.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e3401f1835d0673e-kpvznedq-ap-northeast-2a.ecs-t.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ecs-t.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z02553193GF1FHLAS18DG"
              },
              {
                "dns_name": "ecs-t.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z0179769JTX4RCP142SO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e3401f1835d0673e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08dba8c0930058443",
              "eni-0ef6a6ba5b539151a"
            ],
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06c385eb79bf709dc"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecs-telemetry",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.2.10",
                "subnet_id": "subnet-04b0b86336ba5bc9e"
              },
              {
                "ipv4": "10.10.4.7",
                "subnet_id": "subnet-03b26aec7387a2208"
              }
            ],
            "subnet_ids": [
              "subnet-03b26aec7387a2208",
              "subnet-04b0b86336ba5bc9e"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecs-telemetry-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-ecs-telemetry-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_security_group.vpc_endpoint",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:077672914621:vpc-endpoint/vpce-01c4cf21b5ab3c0b6",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-01c4cf21b5ab3c0b6",
            "owner_id": "077672914621",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02f852039250bcbda"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "service_region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-s3-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "like98100-deploy-dev-s3-endpoint",
              "Owner": "like98100",
              "Project": "deploy-test"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0985a1bffd8bef445"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}